0011 ReplicatorG

* Support for heated build platform
* On startup, ReplicatorG now not only prints the Motherboard's firmware version on the console, but also the Extruder controller's firmware version

0010 ReplicatorG

* Status panel responses improved
* Added images for set home/go home buttons
* Reconcilles position after builds
* Connect button added
* Autoscan defaults to disabled
* Display machine's name, if set
* Disable simulation in preferences
* Build to file (to local SD card, for instance)
* Removed post-build resets

00091 ReplicatorG

* Integrated Rick Pollack's TwitterBot code

0009 ReplicatorG

* Moved to Swing file selector
* Remember last opened directory
* Scrolling on lists in uploader, SD card file selector
* Bundled gen3 firmware v1.5 (SD card improvements)
* Bundled gen3 firmware v1.6 (PID control for heater)
* Close control panel on build start
* Only one control panel available at a time
* Added disconnect and control panel buttons

0008 ReplicatorG

* Added avrdude to distributions
* Added firmware binaries and .xml
* Added firmware uploader GUI
* Support for building to named files on the SD card
* Support for building from named files
* Added reset machine button

0007 ReplicatorG

* Fix for issue 15 (credit to Charles Pax)
* Adding constants for SD card write/playback commands
* Basic testing support for SD card builds
* Adding card capture api
* Adding pausability to remote builds
* Switching out gif for png with transparency
* Refactor/prep for SD uploading
* Button bar revision, interface prep for SD card prints
* Fixed up startup window positioning
* Removed preferences store/load race condition that was screwing up window sizing
* moved some shutdown code out of handleQuit2 into proper shutdown hook
* hide drivers marked 'experimental'
* added preference for viewing experimental machine profiles
* busy cursor on long loads
* reduced load time for files in large directory
* proper error messages for SD operations